<resources>
    <string name="app_name">PlantplantApp</string>

    <string name="welcome">Welcome!</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="logIn">Log In</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="cancel">Cancel</string>
    <string name="main">Main</string>
    <string name="updateInfo">Update Info</string>
    <string name="shopping">Shopping</string>
    <string name="logOut">Log Out</string>
    <string name="detail">Product Detail</string>
    <string name="update">Update</string>
    <string name="shoppingTitle">Click a name to see a product detail!</string>
    <string name="addToCart">Add to Cart</string>
    <string name="backToShopping">Back to Shopping</string>
    <string name="yourCart">Your Cart</string>
    <string name="buyMyItems">Buy My Items</string>
    <string name="payInfo">Payment Information</string>
    <string name="cardNo">Card #: </string>
    <string name="purchase">Purchase</string>
    <string name="successful">Purchase Successful!</string>
    <string name="total">Total: </string>
    <string name="seeMyCart">See My Cart</string>
    <string name="order_id">Order ID</string>
    <string name="account_id">Account ID</string>
    <string name="order_date">Order Date</string>
    <string name="status">Status</string>
    <string name="cart_id">Cart ID</string>
    <string name="confirm">Confirm</string>
    <string name="mainPage">Main Page</string>
    <string-array name="categories">
        <item>All</item>
        <item>Appliances</item>
        <item>Book</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Health</item>
    </string-array>

    <!-- strings for admin -->
    <!--Buttons-->
    <string name="addBtn">Add Product</string>
    <string name="updateBtn">Update/Delete Product</string>
    <string name="viewOrdersBtn">View Orders</string>
    <string name="updateBtn2">Update</string>
    <string name="backBtn">Back</string>
    <string name="cancelBtn">Cancel</string>

    <!--Textview-->
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="productName">Product Name</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="orderTitle">Please click orders status to confirm it</string>

</resources>
