<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminOrdersActivity"
    android:background="@color/lightCyan">

    <TextView
        android:id="@+id/orderTxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please click orders status to confirm it" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/orderTxtTitle" >
        <TableLayout
            android:id="@+id/latTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/order_id" />
                <TextView android:text="@string/account_id" />
                <TextView android:text="@string/cart_id" />
                <TextView android:text="@string/order_date"/>
                <TextView android:text="@string/status" />
            </TableRow>
        </TableLayout>
    </ScrollView>


</RelativeLayout>