<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMain"
    android:background="@color/lightCyan">

    <TextView
        android:id="@+id/txtUserMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/pt10"/>
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_below="@id/txtUserMain"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btnShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping"
        android:layout_below="@id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:onClick="btnShopping"/>
    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateInfo"
        android:layout_below="@id/btnShopping"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:onClick="btnUpdate"/>
    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:layout_below="@id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:onClick="btnLogOut"/>
</RelativeLayout>