<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/lightCyan">

    <TextView
        android:id="@+id/txtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/pt10"
        android:layout_centerHorizontal="true"/>

    <TableLayout
        android:id="@+id/latTableLayout"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRegistration"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fName" />

            <EditText
                android:id="@+id/edtFName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lName" />

            <EditText
                android:id="@+id/edtLName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/address" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/city" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/province" />

            <EditText
                android:id="@+id/edtProvince"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/latTableLayout"
        android:layout_marginStart="@dimen/dp50"
        android:onClick="btnRegister"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toEndOf="@id/btnRegister"
        android:layout_alignTop="@id/btnRegister"
        android:onClick="btnCancel"/>
</RelativeLayout>