<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserUpdate"
    android:background="@color/lightCyan">

    <TableLayout
        android:id="@+id/latTableLayout"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow
            android:id="@+id/tblRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fName"/>
            <EditText
                android:id="@+id/edtFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lName"/>
            <EditText
                android:id="@+id/edtLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"/>
            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"/>
            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"/>
            <EditText
                android:id="@+id/edtProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@id/latTableLayout"
        android:layout_marginStart="@dimen/dp100"
        android:onClick="btnUpdate"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignTop="@id/btnUpdate"
        android:layout_toEndOf="@id/btnUpdate"
        android:onClick="btnCancel"/>

</RelativeLayout>