<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCart"
    android:background="@color/lightCyan">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourCart"
        android:textSize="@dimen/pt10"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:onClick="btnPurchase"
        android:text="@string/buyMyItems" />

    <Button
        android:id="@+id/btnBackToShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:onClick="backToShopping"
        android:layout_toEndOf="@id/btnPurchase"
        android:text="@string/backToShopping"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackToShopping">
        <TableLayout
            android:id="@+id/latTableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

        </TableLayout>

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            />
        <TextView
            android:id="@+id/txtTotalDisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </ScrollView>


</RelativeLayout>