<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shopping"
    android:background="@color/lightCyan">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoppingTitle"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/pt10"/>
    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"/>

    <Button
        android:id="@+id/btnSeeCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seeMyCart"
        android:onClick="btnSeeMyCart"
        android:layout_below="@+id/txtTitle"
        android:layout_toEndOf="@id/spnCategory"/>

    <Button
        android:id="@+id/mainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_toEndOf="@id/btnSeeCart"
        android:onClick="btnMainPage"
        android:text="@string/mainPage" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnSeeCart" >
        <TableLayout
            android:id="@+id/latTableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

        </TableLayout>
    </ScrollView>

</RelativeLayout>