<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMain"
    android:background="@color/lightCyan">

        <!--<Button-->
            <!--android:id="@+id/addProductBtn"-->
            <!--android:layout_width="267dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginStart="70dp"-->
            <!--android:layout_marginTop="104dp"-->
            <!--android:onClick="addClicked"-->
            <!--android:text="@string/addBtn" />-->

        <Button
            android:id="@+id/updateProductBtn"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="210dp"
            android:onClick="updateClicked"
            android:text="@string/updateBtn" />

        <Button
            android:id="@+id/viewOrdersBtn"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="315dp"
            android:onClick="viewOrdersClicked"
            android:text="@string/viewOrdersBtn" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="73dp"
            android:layout_marginTop="424dp"
            android:layout_marginEnd="74dp"
            android:onClick="logoutBtnClicked"
            android:text="@string/logOut" />

</RelativeLayout>